# amastay

./: .dockerignore  .env  .env staging  .env.develop  .env.production  .gitignore  .prettierrc.json  Dockerfile  Makefile  __init__.py  ai_concierge_dynamic.py  amastay_service_account.json  app.py  auth_utils.py  chat_with_model.py  create_booking.py  create_conversation.py  create_property.py  create_user.py  db_config.py  delete_sagemaker_domains.py  deploy-all.sh  deploy.py  depoy_all  generate_ai_response.py  generte_ai_response.py  get_message_history.py  get_property_info.py  get_renter_info.py  google.json  installed_packages.txt  invoke_sagemaker.py  log_message.py  package-lock.json  package.json  pagination.py  phone_utils.py  pinpoint_sms.py  policy.json  pyproject.toml  (+11 more)
#/: pyvenv.cfg
config/: stripe.py
controllers/: admin_controller.py  ai_controller.py  auth_controller.py  booking_controller.py  chat_controller.py  decorators.py  guest_controller.py  health_controller.py  manager_controller.py  model_controller.py  property_controller.py  property_information_controller.py  routes.py  sagemaker_controller.py  scrape_controller.py  scraper_controller.py  slack_controller.py  sms_controller.py  team_controller.py  token_validator.py  user_controller.py  webhook_controller.py
copilot/: .workspace
depending/: pyvenv.cfg
docker/: DockerfileFrontend  DockerfileScraper
lambda/: handle_incoming_sms.py
models/: __init__.py  ai_message.py  base_meta.py  base_model.py  booking.py  booking_guest.py  booking_guest_model.py  booking_model.py  booking_with_details.py  conversation.py  document.py  document_model.py  guest.py  guest_model.py  hf_message.py  hf_message_model.py  information_subject.py  information_subject_model.py  manager.py  manager_model.py  manager_team_model.py  message.py  message_model.py  model_params.py  model_params_model.py  model_response.py  owner.py  owner_model.py  property.py  property_document.py  property_information.py  property_information_model.py  property_information_subject.py  property_information_subject_model.py  property_metadata_model.py  property_model.py  property_photo_model.py  property_teams.py  property_teams_model.py  recommendation.py  (+9 more)
on/: pyvenv.cfg
or/: pyvenv.cfg
python,/: pyvenv.cfg
sagemaker/: cleanup_sagemaker.py  create.ts  delete_sagemaker_domains.py  deploy.py  deploy_endpoint.py  deploy_model.py  deploy_serverless.py  list_endpoints.py  manage_endpoints.py
scraper/: package.json
scripts/: query_sagemaker_interactive.py
services/: ai_service.py  amastay_scraper.py  auth_service.py  bedrock_service.py  booking_service.py  chat_service.py  conversation_service.py  document_service.py  documents_service.py  download_service.py  gemini_service.py  guest_service.py  jwt_service.py  llama_image_service.py  llama_service.py  llama_service_open_ai.py  llama_service_vertex.py  manager_service.py  message_service.py  model_params_service.py  model_service.py  otp_service.py  photo_service.py  pinpoint_service.py  process_service.py  property_information_service.py  property_service.py  sagemaker_service.py  scraper_service.py  sms_service.py  storage_service.py  team_service.py  user_service.py  vertex_search_service.py  vertex_service.py
setup/: pyvenv.cfg
supabase/: config.toml
test/: model.py
tests/: mock_sms_message.py  test_auth_service.py  test_create_booking.py  test_create_conversation.py  test_create_property.py  test_create_user.py  test_get_message_history.py  test_guest_service.py  test_happy_flow.py  test_log_message.py  test_owner_signup.py  test_property_controller.py  test_property_service.py  test_supabase_connection.py  test_upload.py  test_url.py  (+1 more)
(+46 files in other folders)
